Update approveOrReject method to use OwnerMismatchException for HTTP 403 response
- Replaced NotFoundException with OwnerMismatchException in BookingServiceImpl.approveOrReject
  to return HTTP 403 when user is not the item owner, aligning with Postman test expectations.
- Added comprehensive Javadoc documentation for the approveOrReject method, detailing
  parameters, return value, and possible exceptions (NotFoundException, OwnerMismatchException, ValidationException).
- Improved logging message consistency by including "ID" in owner and booking references.